--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body 
         {
-            background-image: url("host.jpg");
+            background-image: url("FONDO.png");
             height: 50%;
             background-position: center;
             background-repeat: no-repeat;
